# Credit-memo-builder

./: .env.example  .gitignore  CLAUDE.md  README.md  Start Builder.bat
backend/: README.md  pyproject.toml  run_local.py
backend/app/: __init__.py  binder.py  binder_extraction.py  binder_models.py  calculations.py  esign_docusign.py  extraction.py  loandocs.py  loandocs_extraction.py  loandocs_models.py  loandocs_sheet.py  logo.txt  main.py  memo.py  models.py  pa_agreement.py  pa_breakdown.py  pa_extraction.py  pa_models.py  research.py
backend/app/templates/: closing_binder.html.j2  loan_documents.html.j2  memo.html.j2  participation_agreement_brookridge.docx  participation_agreement_standard.docx
backend/tests/: test_binder.py  test_calculations.py  test_esign_docusign.py  test_loandocs.py  test_loandocs_sheet.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  ClosingBinderBuilder.vue  LoanDocsBuilder.vue  PaBuilder.vue
frontend/src/lib/: api.js
