[project]
name = "credit-memo-builder-backend"
version = "1.0.0"
description = "Backend API for South River Capital athlete-loan credit memos"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "anthropic>=0.40",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    # WeasyPrint enables server-side PDF rendering. It needs system libraries
    # (pango, cairo). See backend/README.md. If you can't install it, the API
    # returns a clear 501 and the frontend falls back to browser print-to-PDF.
    "weasyprint>=61",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",        # for FastAPI TestClient
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
