[project]
name = "credit-memo-builder-backend"
version = "1.0.0"
description = "Backend API for South River Capital athlete-loan credit memos"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "anthropic>=0.40",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    # PDF rendering uses Playwright's headless Chromium, whose print engine
    # honors the memo template's @page / @media print CSS and needs no system
    # GTK/Pango/Cairo libraries (WeasyPrint couldn't load those on Windows).
    # After install, fetch the browser once:  python -m playwright install chromium
    "playwright>=1.40",
    # Participation Agreement Builder: fill the .docx template (docxtpl/python-docx).
    # PDF export of the agreement uses LibreOffice headless (located at runtime),
    # not a Python dependency.
    "python-docx>=1.1",
    "docxtpl>=0.18",
    # Reads the Participant Breakdown .xlsx (participation %, points, late-fee share).
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",        # for FastAPI TestClient
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
